Include non-inherited variables when iterating computedStyleMap.

R=futhark@chromium.org

Bug: 850018
Change-Id: Ia9a4ddb849032f321f548146ab6b4f47fa42ac28
Reviewed-on: https://chromium-review.googlesource.com/1090919
Commit-Queue: Anders Ruud <andruud@chromium.org>
Reviewed-by: Rune Lillesveen <futhark@chromium.org>
Cr-Commit-Position: refs/heads/master@{#565794}
Former-commit-id: d1d4800117bc90245289802cbc50e4f8501bcb6a