third_party/blink/renderer/core/css/computed_style_css_value_mapping.cc
@@ -61,8 +61,9 @@ HeapHashMap<AtomicString, Member<const CSSValue>>
 ComputedStyleCSSValueMapping::GetVariables(const ComputedStyle& style,
                                            const PropertyRegistry* registry) {
   HeapHashMap<AtomicString, Member<const CSSValue>> variables;
-  // TODO(timloh): Also return non-inherited variables
+
   StyleInheritedVariables* inherited = style.InheritedVariables();
+
   if (inherited) {
     for (const auto& name : inherited->GetCustomPropertyNames()) {
       const CSSValue* value =
@@ -71,6 +72,18 @@ ComputedStyleCSSValueMapping::GetVariables(const ComputedStyle& style,
         variables.Set(name, value);
     }
   }
+
+  StyleNonInheritedVariables* non_inherited = style.NonInheritedVariables();
+
+  if (non_inherited) {
+    for (const auto& name : non_inherited->GetCustomPropertyNames()) {
+      const CSSValue* value =
+          ComputedStyleCSSValueMapping::Get(name, style, registry);
+      if (value)
+        variables.Set(name, value);
+    }
+  }
+
   return variables;
 }
 
